Implemented the learning-flow logic across backend and frontend